# chimahon

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KAKUYOMU_FIXES.md  NOVEL_NEXT_HANDOFF.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build_pull_request.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/beta/res/drawable/: ic_launcher_foreground.xml
app/src/debug/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/lapis/: SOURCE.txt  back.html  front.html  styling.css
app/src/main/res/anim/: fade_in.xml  player_fade_out.xml  slide_in_up.xml  slide_out_down.xml  slide_out_up.xml
app/src/main/res/drawable/: ic_chimahon.xml  ic_chimahon_dark.xml  ic_forward_10_24dp.xml  ic_komikku.xml  ic_launcher_background.xml  ic_launcher_monochrome.xml  ic_schedule_24dp.xml  ic_skip_next_24dp.xml  ic_skip_previous_24dp.xml  ic_speed_24dp.xml  ic_splash.xml  ic_style_24dp.xml  ic_text_fields_24dp.xml  ic_youtube.xml  outline_brand_family_24.xml  sharp_shadow_24.xml  widget_preview_badge.xml  widget_preview_bg_primary.xml  widget_preview_btn_primary.xml  (+5 more)
app/src/main/res/drawable-night/: ic_splash.xml
chimahon/: CMakeLists.txt  build.gradle.kts  consumer-rules.pro
chimahon-local-ocr/src/main/cpp/: lens_asset_init.cpp
chimahon/src/main/: AndroidManifest.xml
chimahon/src/main/cpp/: CMakeLists.txt  hoshidicts_jni.cpp  word_audio_jni.cpp
core/common/: build.gradle.kts
data/: build.gradle.kts
domain/: build.gradle.kts
gradle/: androidx.versions.toml  compose.versions.toml  libs.versions.toml  sy.versions.toml
source-api/: consumer-proguard.pro
tests/: test_invariant_CrashLogUtil.kt
(+1093 files in other folders)
